<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Privillege Parking</string>
    <string name="preference">preference</string>
    <string name="action_settings">Settings</string>
    <string name="desc">normol</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="member">Member</string>
    <string name="privillege">Privillege</string>
    <string name="promotion">Promotion</string>
    <string name="tracking">Tracking</string>
    <string name="title_activity_privillege">PrivillegeActivity</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <string name="title_activity_tracking">TrackingActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Home String -->
    <string name="setting_button">Setting</string>
    <string name="setting_button_detail">Setting Language\nSetting Configuration \nClear History</string>
    <string name="member_button">Member</string>
    <string name="member_button_detail">Member Login \nMember Registation \nMember Detail</string>
    <string name="about_button">About us</string>
    <string name="about_button_detail">What is SIPS project \nWho is joining us</string>

    <!-- MemberBox -->
    <string name="memberId">MemberId</string>
    <string name="password">Password</string>
    <string name="member_label">MEMBER LOGIN</string>
    <string name="logout"> Log out </string>
    <string name="butt_login">Login</string>
    <string name="butt_cancel">Cancel</string>
    <string name="butt_regis">Register</string>
    <string name="title_activity_activity_group">ActivityGroup</string>

    <!-- Tracking -->
    <string name="butt_your_car">Your\nCar Park</string>
    <string name="butt_your_car_detail">Memorize your car Position by QR\nShow Detail About your car position\nSearch Location</string>
    <string name="butt_tracking">Tracking</string>
    <string name="butt_tracking_detail">Find QR symbol near you\nScan it show route to your target</string>
    <string name="butt_track_search">Search</string>
    <string name="butt_track_scan">Scan new QR</string>
    <string name="butt_track_history">Show History</string>
    <string name="car_pos_is">Your car position is 3A11</string>

    <!-- Privillege -->

    <string name="butt_pri_valet">Valet\nParking</string>
    <string name="butt_pri_reserve">Reservation</string>
    <string name="butt_pri_custom">Customer\nService</string>
    <string name="butt_pri_valet_detail">Take care time\nServe your car in 5 minute</string>
    <string name="butt_pri_reserve_detail">Booking car park\nSave time\nSave money</string>
    <string name="butt_pri_custom_detail">Customer\nService</string>
    <string name="title_activity_history">HistoryActivity</string>

    <!-- Parking -->
    <string name="more_detail">See More Detail\.\.\.</string>
    <string name="title_activity_parking_detail">ParkingDetailActivity</string>
    <string name="butt_see_park">See Parking</string>
    <string name="butt_reservation">Reservation</string>
    <string name="search">Search your parking</string>
    <string name="refresh">Refresh</string>
	
    <string-array name = "parking_floor">
        <item>FloorG</item>
        <item>Floor1A</item>
        <item>Floor1B</item>
        <item>Floor2A</item>
        <item>Floor2B</item>
    </string-array>
     <string-array name = "parking_floor">
        <item>Floor1</item>
        <item>Floor2</item>
    </string-array>
    
    
    
    
    <!-- Menu -->
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>

    <!-- Custom Dialog -->
    <string name="custom_dialog_hint">Please Input Your ValetParkingID</string>
    <string name="valet_id">valetID</string>
    <string name="valet_tel">telephon number</string>
    <string name="title_activity_parking_map_floor">ParkingMapFloorActivity</string>
    
    <string name="custumer_id">CustumerId</string>
    <string name="pri_id">PrivillegeId</string>
	<string name="input_custumer_id">Input your custumerId</string>
    <string name="input_pri_id">or input your PrivillegeId</string>
    
</resources>
