<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
     >
     <TextView
         android:id="@+id/member_label2"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:text="@string/member_label"
         android:textSize="25sp"
         android:textColor="#FFFFFF"
         android:gravity="center_vertical"
         >
     </TextView>
    <EditText
        android:id="@+id/member_id_box2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_button_height"
        android:layout_below="@id/member_label2"
        android:hint="@string/memberId"
        android:textColor="@android:color/black"
        android:ems="10" 
        >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/member_pass_box2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_button_height"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPassword" 
        android:layout_below="@id/member_id_box2"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_button_height"
        android:orientation="horizontal"
        android:layout_below="@id/member_pass_box2"
        >
        <Button 
            android:id="@+id/butt_member_login2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/butt_login"
            />
              <Button 
            android:id="@+id/butt_member_regis2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/butt_cancel"
            />
        
    </LinearLayout>


</RelativeLayout>