<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_size"
    android:paddingRight="@dimen/padding_size"
	android:background="@drawable/bg_tracking1"
    tools:context=".TrackingActivity" >

    
	<LinearLayout
	    android:id="@+id/button_group_tracking"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="@dimen/padding_bottom_parent"
	    
	    >
	  <RelativeLayout 
    android:id="@+id/butt_your_car"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_button_tracking_height"
    android:background="@drawable/button_bg"
    >    
    <TextView 
        android:id="@+id/butt_content_your_car"
        android:layout_height="match_parent"
        android:layout_width="@dimen/custom_button_width"
        android:gravity="center"
        android:text="@string/butt_your_car"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_textsize1"
        />
    <TextView 
        android:id="@+id/custom_content_your_car2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/butt_content_your_car"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/butt_your_car_detail"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_textsize3"
        />
</RelativeLayout>
	<RelativeLayout 
	android:layout_marginTop="@dimen/padding_bottom_to_bottom"
    android:id="@+id/butt_tracking"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_button_tracking_height"
    android:background="@drawable/button_bg"
    >    
    <TextView 
        android:id="@+id/butt_traking_content"
        android:layout_height="match_parent"
        android:layout_width="@dimen/custom_button_width"
        android:gravity="center"
        android:text="@string/butt_tracking"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_textsize1"
        />
    <TextView 
        android:id="@+id/butt_traking_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/butt_traking_content"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/butt_tracking_detail"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_textsize3"
        />
</RelativeLayout>
	</LinearLayout>
	<RelativeLayout
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="@dimen/home_button_margin_top"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:id="@+id/car_detail_layout"
	    android:visibility="invisible"
	    >
	    <TextView 
	        android:layout_width = "140dp"
	        android:layout_height="35dp"
	        android:id="@+id/car_pos"
	        android:textColor="#FFFFFF"
	        android:gravity="center_vertical"
	        android:text="@string/car_pos_is"
	        android:textSize="@dimen/small_textsize2"
	        />
	    <ImageView
	        android:id="@+id/map_your_car"
	        android:layout_height="@dimen/map_car_height"
	        android:layout_width="match_parent"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_below="@id/car_pos"
	        android:background="@drawable/button_bg"
	        android:contentDescription="@string/desc"
	        >
	    </ImageView>
	    
	    <LinearLayout
	        android:id="@+id/butt_tracking_group"
	        android:layout_width="match_parent"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_height="@dimen/butt_track_height"
	        android:orientation="horizontal"
	        android:layout_below="@id/map_your_car"
	         >
	        <Button 
	            android:id="@+id/butt_track_search"
	            android:layout_height="match_parent"
	            android:layout_width="0dp"
	            android:layout_weight="1.0"
	            android:textColor="#000000"
	            android:text="@string/butt_track_search"
	            />
	        <Button 
	            android:id="@+id/butt_track_scan"
	            android:layout_height="match_parent"
	            android:layout_width="0dp"
	            android:layout_weight="1.0"
	            android:textColor="#000000"
	            android:text="@string/butt_track_scan"
	            android:textSize="@dimen/small_textsize2"
	            />
	        <Button 
	            android:id="@+id/butt_track_show_history"
	            android:layout_height="match_parent"
	            android:layout_width="0dp"
	            android:layout_weight="1.0"
	            android:textColor="#000000"
	            android:text="@string/butt_track_history"
	            android:textSize="@dimen/small_textsize2"
	           
	            />
	        
	    </LinearLayout>	    
	</RelativeLayout>
</RelativeLayout>
