<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_size"
    android:paddingRight="@dimen/padding_size"
  
    tools:context=".PrivillegeActivity"
	android:background="@drawable/bg_privillege"
     >

    	<LinearLayout
	    android:id="@+id/button_group_privillege"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="@dimen/padding_bottom_parent"
	    >
	  <RelativeLayout 
    android:id="@+id/butt_pri_valet"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_button_tracking_height"
    android:background="@drawable/button_bg"
    >    
    <TextView 
        android:id="@+id/butt_content_valet"
        android:layout_height="match_parent"
        android:layout_width="@dimen/custom_button_width"
        android:gravity="center"
        android:text="@string/butt_pri_valet"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_textsize1"
        />
    <TextView 
        android:id="@+id/butt_content_valet2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/butt_content_valet"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/butt_pri_valet_detail"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_textsize3"
        />
</RelativeLayout>
	<RelativeLayout 
	android:layout_marginTop="@dimen/padding_bottom_to_bottom"
    android:id="@+id/butt_reserve"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_button_tracking_height"
    android:background="@drawable/button_bg"
    >    
    <TextView 
        android:id="@+id/butt_reserve2"
        android:layout_height="match_parent"
        android:layout_width="@dimen/custom_button_width"
        android:gravity="center"
        android:text="@string/butt_pri_reserve"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_textsize2"
        />
    <TextView 
        android:id="@+id/butt_reserve3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/butt_reserve2"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/butt_pri_reserve_detail"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_textsize3"
        />
</RelativeLayout>
	<RelativeLayout 
	android:layout_marginTop="@dimen/padding_bottom_to_bottom"
    android:id="@+id/butt_customer"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_button_tracking_height"
    android:background="@drawable/button_bg"
    >    
    <TextView 
        android:id="@+id/butt_custom_content"
        android:layout_height="match_parent"
        android:layout_width="@dimen/custom_button_width"
        android:gravity="center"
        android:text="@string/butt_pri_custom"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_textsize2"
        />
    <TextView 
        android:id="@+id/butt_custom_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/butt_custom_content"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/butt_pri_custom_detail"
        android:textColor="@android:color/white"
        android:textSize="@dimen/small_textsize3"
        />
</RelativeLayout>
	</LinearLayout>

</RelativeLayout>
