<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dialog_height"
    android:background="#606060"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/custom_dialog_hint"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_textsize1"
        android:textStyle="bold" >
    </TextView>
    
    <EditText 
        android:id ="@+id/valet_id_input"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/valet_id"
     	android:textColorHint="#C0C0C0"
     	android:textSize="@dimen/normal_textsize1"
        android:gravity="center_vertical"
        />
    
    <EditText 
        android:id ="@+id/tel_input"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/valet_tel"
     	android:textColorHint="#C0C0C0"
     	android:textSize="@dimen/normal_textsize1"
        android:gravity="center_vertical"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#606060"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="Yes"
            android:textColor="#404040"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="No"
            android:textColor="#404040"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>