<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberActivity"
    android:background="@drawable/shoping1"
     >

    <RelativeLayout
        android:id="@+id/member_login_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
         >

	<TextView
	    android:id="@+id/member_label"
	    android:layout_height="@dimen/member_label"
	    android:layout_width="wrap_content"
	    android:gravity="center"
	    android:textColor="#303030"
	    android:text="@string/member_label"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="@dimen/activity_vertical_margin"
	    android:textSize="@dimen/large_textsize1"
		android:textStyle="bold"	    
	    />
	

	
	<TextView
	    android:id="@+id/member_firstname"
	    android:layout_height="@dimen/member_label"
	    android:layout_width="wrap_content"
	    android:gravity="center"
	    android:textColor="#D75f00"
	    
	    android:layout_below="@id/member_label"
	    android:layout_marginLeft="@dimen/activity_vertical_margin"
	    android:textSize="@dimen/normal_textsize2"
		android:textStyle="bold"	    
	    />
	
	<TextView
	    android:id="@+id/member_lastname"
	    android:layout_height="@dimen/member_label"
	    android:layout_width="wrap_content"
	    android:gravity="center"
	    android:textColor="#D75f00"

	    android:layout_below="@id/member_firstname"
	    android:layout_marginLeft="@dimen/activity_vertical_margin"
	    android:textSize="@dimen/normal_textsize2"
		android:textStyle="bold"	    
	    />
		<ImageView 
	    android:id="@+id/member_profile"
	    android:layout_width="@dimen/image_picture"
	    android:layout_height="@dimen/image_picture"
	    android:contentDescription="@string/desc"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:src="@drawable/ic_launcher"
	    />
	
	<TextView
	    android:id="@+id/member_tel"
	    android:layout_height="@dimen/member_label"
	    android:layout_width="wrap_content"
	    android:gravity="center"
	    android:textColor="#D75f00"
	    
	    android:layout_below="@id/member_lastname"
	    android:layout_marginLeft="@dimen/activity_vertical_margin"
	    android:textSize="@dimen/normal_textsize2"
		android:textStyle="bold"	    
	    />
    
    <Button android:id="@+id/member_button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_below="@id/member_tel"
        android:layout_margin="15dp"
        android:textSize="@dimen/normal_textsize2"
        ></Button>"

    </RelativeLayout>
	


</RelativeLayout>
