<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/picture_park_height"
    android:layout_marginTop="@dimen/text_mergin"
    android:layout_marginBottom="@dimen/text_mergin" 
    android:background="@drawable/button_bg"
    >
    <ImageView 
        android:id="@+id/image_building"
        android:layout_height="@dimen/picture_park_height"
        android:layout_width="@dimen/picture_park_height"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/desc"
        android:background="@android:color/transparent"
        />
    
    <LinearLayout 
        android:id="@+id/car_detail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/image_building"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/text_mergin"
        >
        <TextView 
            android:id="@+id/parking_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/member"
            android:textSize="@dimen/small_textsize3"
            />
          <TextView 
            android:id="@+id/parking_attaction"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/member"
            android:textSize="@dimen/small_textsize2"
            />
            <TextView 
            android:id="@+id/parking_privillege"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/member"
            android:textSize="@dimen/small_textsize2"
            />
              <TextView 
            android:id="@+id/parking_see_detail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/more_detail"
            android:textSize="@dimen/small_textsize2"
            />
       
    </LinearLayout>
            <TextView 
            android:id="@+id/parking_parking_distance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/more_detail"
            android:textSize="@dimen/small_textsize2"
            android:layout_toRightOf="@id/image_building"
            android:layout_below="@id/car_detail"
            /> 
            <TextView 
            android:id="@+id/parking_parking_capacity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/more_detail"
            android:textSize="@dimen/small_textsize2"
            android:layout_alignParentRight="true"
            android:layout_below="@id/car_detail"
            />                       

</RelativeLayout>
